--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ include('scripts.php');
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="icon" href="favicon/16px/favicon.ico">
+
 </head>
 <body>
 
