--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: development by xavier
+title: xavier bonilla
 ---
 <div class="blurb">
 	<h1>xavier bonilla</h1>
@@ -9,7 +9,7 @@ title: development by xavier
 		"Concept, production, and post are essential aspects of a shoot needed for understanding and development." 
 	</p>
 	<br>
-		<p>A creative immersed in motion-films and shooting images. Originally from Los Angeles, California. 
+		<p>A creative immersed in motion-films and shooting images. <br>Originally from Los Angeles, California. 
 			<br> Currently working in Minneapolis, Minnesota.</p>
 		<br>
 	<p>
