--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: xavier bonilla
 		"Concept, production, and post are essential aspects of a shoot needed for understanding and development." 
 	</p>
 	<br>
-		<p>A creative immersed in motion-films and shooting images. <br>Originally from Los Angeles, California. 
+		<p>Creative immersed in motion-films and shooting images. From Los Angeles, California. 
 			<br> Currently working in Minneapolis, Minnesota.</p>
 		<br>
 	<p>
