--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: xavier bonilla
 	<h1>xavier bonilla</h1>
 	<h2>photographer</h2>
 	<p>
-		"Concept, production, and post are essential aspects of a shoot needed for understanding and development." 
+		"Concept, production, and post are essential aspects of a shoot for understanding and development." 
 	</p>
 	<br>
 		<p>Creative immersed in motion-films and shooting images. From Los Angeles, California. 
