--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: xavier bonilla
 ---
 <div class="blurb">
 	<h1>xavier bonilla</h1>
-	<h2>photographer</h2>
+	<h2>developer+ photographer</h2>
 	<p>
 		"Concept, production, and post are essential aspects of a shoot for understanding and development." 
 	</p>
