--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@ title: xavier bonilla
 ---
 <div class="blurb">
 	<h1>xavier bonilla</h1>
-	<h2>developer + photographer</h2>
+	<h2>developer</h2>
 	<p>
-		"Concept, production, and post are essential aspects of a shoot for understanding and development." 
-	</p>
-	<br>
-		<p>Creative immersed in motion-films and shooting images. From Los Angeles, California. 
-			<br> Currently working in Minneapolis, Minnesota.</p>
-		<br>
-	<p>
-		Studio:
-		<br>
-		2500 University Ave W.
-		<br>
-		Saint Paul, MN, 55114
-		<br><br>
+	<ul>
+        		<li><a href="/agency">Arquette Agency</a></li>
+        		<li><a href="/eureka">Eureka! Destination Planner</a></li>
+			<li><a href="http://imageecstasy.com/">Photography Portfolio</a></li>
+
+    		</ul>
+	
 	</p>
 </div><!-- /.blurb -->
