--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: xavier bonilla
 	<h2>developer</h2>
 	<p>
 	<ul>
+		        <li><a href="/finearts">Minneapoliis College Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
         		<li><a href="/eureka">Eureka! Destination Planner</a></li>
 			<li><a href="http://imageecstasy.com/">Photography Portfolio</a></li>
