--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: xavier bonilla
 		        <li><a href="/finearts">Minneapoliis College Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
         		<li><a href="/eureka">Eureka! Destination Planner</a></li>
+			<li><a href="/finearts">Minneapoliis College Fine Arts</a></li>
 			<li><a href="http://imageecstasy.com/">Photography Portfolio</a></li>
 
     		</ul>
