--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@ title: xavier bonilla
 ---
 <div class="blurb">
 	<h1>xavier bonilla</h1>
-	<h2>developer</h2>
-	<p>
+	<h2>developer + artist</h2>
+	<p>Creative immersed in motion-films and shooting images.
+	</p>
+
+	<h3>Portfolio of web development involving html/ css/ javascript and server side php programming.
 	<ul>
 		        <li><a href="/arts-2019-master 3">Minneapoliis College Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
-        		<li><a href="/eureka">Eureka! Destination Planner</a></li>
-			<li><a href="http://imageecstasy.com/">Photography Portfolio</a></li>
+        		<li><a href="/eureka">Eureka! Travel Destination Planner</a></li>
+			<li><a href="http://imageecstasy.com/">Photography Project</a></li>
 
     		</ul>
-	
-	</p>
+	</h3>
 </div><!-- /.blurb -->
