--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: xavier bonilla
 
 	<h3>Portfolio of web development involving html/ css/ javascript and server side php programming.
 	<ul>
-		        <li><a href="/arts-2019-master 3">Minneapoliis College Fine Arts</a></li>
+		        <li><a href="/arts-2019-master 3">Minneapolis College of Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
         		<li><a href="/eureka">Eureka! Travel Destination Planner</a></li>
 			<li><a href="http://imageecstasy.com/">Photography Project</a></li>
