--- a/agency/index.html
+++ b/agency/index.html
@@ -19,7 +19,7 @@
         <div id="header-navigation">
             <ul>
                 <li>Division</li>
-                <li><a class="" href="http://arquettetalents.com/?q=divisions_division&Cat=Women">Women</a></li>
+<!--                 <li><a class="" href="http://arquettetalents.com/?q=divisions_division&Cat=Women">Women</a></li> -->
                 <li><a class="" href="board.html">Development</a></li>
                 <li><a class="" href="http://arquettetalents.com/?q=divisions_division&Cat=Men">Men</a></li>
             </ul>
