--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: xavier bonilla
 	<p>Creative immersed in motion-films and shooting images.
 	</p>
 
-	<h5>Portfolio of web development involving html/ css/ javascript and server side php programming.
-	</h5>
+	<p>Portfolio of web development involving html/ css/ javascript and server side php programming.
+	</p>
 	<ul>
 		        <li><a href="/arts-2019-master 3">Minneapolis College of Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
