--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@ title: xavier bonilla
 
 	<br>
 	<br>
-	<p>**** below is for grading by Carl Naymst ****
-		Vbr>
 	<p>Portfolio of web development involving html/ css/ javascript and server side php programming.
 	</p>
 	<ul>
 		        <li><a href="/arts-2019-master 3">Minneapolis College of Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
-        		<li><a href="/eureka">Eureka! Travel Destination Planner</a></li>
-			<li><a href="http://imageecstasy.com/">Photography Project</a></li>
+			<li><a href="http://imageecstasy.com/">Photography project</a></li>
+		        <li><a href="/eureka">Eureka! Travel Destination Planner</a></li>
+
 
     		</ul>
 </div><!-- /.blurb -->
