--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: xavier bonilla
 
 	<br>
 	<br>
-	<p>web development involving html/ css/ javascript and server side php programming.
+	<p>Web development involving html/ css/ javascript and server side php programming.
 	</p>
 	<ul>
 		        <li><a href="/arts-2019-master 3">Minneapolis College of Fine Arts</a></li>
