--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: xavier bonilla
 <div class="blurb">
 	<h1>xavier bonilla</h1>
 	<h2>developer + artist</h2>
-	<p>Creative immersed in motion-films and shooting images.
+	<p>Creative immersed in directing motion-films and shooting images.
 	</p>
 
 	<br>
