--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: xavier bonilla
 		        <li><a href="/arts-2019-master 3">Minneapolis College of Fine Arts</a></li>
         		<li><a href="/agency">Arquette Agency</a></li>
 			<li><a href="http://imageecstasy.com/">Photography project</a></li>
-		        <li><a href="/eureka">Eureka! Travel Destination Planner</a></li>
+		        <li><a href="/art-co">Eureka! Travel Destination Planner</a></li>
 
 
     		</ul>
