--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@ title: xavier bonilla
 	<h2>developer + artist</h2>
 	<p>Creative immersed in directing motion-films and shooting images.
 	</p>
-
 	<br>
+	<br> Currently working in Minneapolis, Minnesota.</p>
+		<br>
+	<p>
+		Studio:
+		<br>
+		2500 University Ave W.
+		<br>
+		Saint Paul, MN, 55114
+		<br><br>
+	</p>
+
 	<br>
 </div><!-- /.blurb -->
