--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: xavier bonilla
 	<p>Creative immersed in directing motion-films and shooting images.
 	</p>
 	<br>
-	<br> Currently working in Minneapolis, Minnesota.</p>
+	<br> 
+	<p>Currently working in Minneapolis, Minnesota.</p>
 		<br>
 	<p>
 		Studio:
