--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@ title: xavier bonilla
 ---
 <div class="blurb">
 	<h1>xavier bonilla</h1>
-	<h2>developer + artist</h2>
+	<h2>artist + developer</h2>
 	<p>Creative immersed in directing motion-films and shooting images.
 	</p>
 	<br>
-	<br> 
-	<p>Currently working in Minneapolis, Minnesota.</p>
-		<br>
+	<br> 	
 	<p>
 		Studio:
 		<br>
